--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "express-handlebars": "^3.0.0",
     "mongoose": "^5.4.0",
     "morgan": "^1.9.1"
+  },
+  "engines": {
+    "node": "10.13.0"
   }
 }
